fixing flex box wrap property value

--- a/html/css/sass/common/_forms.scss
+++ b/html/css/sass/common/_forms.scss
@@ -68,7 +68,7 @@
 //for text elements
 .form-field_wrap-flex {
     display: flex;
-    flex-flow: row no-wrap;
+    flex-flow: row nowrap;
     align-items: center;
 }
 
